<resources>
    <string name="app_name">News App</string>
    <string name="imageview">ImageView</string>
    <string name="text_login_ins">Please sign in to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="text_qa_account">Don\'t have an account?</string>
    <string name="imagebutton">ImageButton</string>
    <string name="text_forget">Forget Password</string>
    <string name="text_forget_ins">Please fill the input below</string>
    <string name="create_account">Create Account</string>
    <string name="text_create_ins">Please fill in the input below here</string>
    <string name="fullname">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="log_in">Log In</string>
    <string name="login_register_question">Already have an account?</string>
    <string name="error_text">Not empty</string>
    <string name="error_pass">Password Mismatch</string>
    <string name="text_user">Users</string>
    <string name="error_register">Register Failed</string>
    <string name="breaking_news">Breaking News</string>
    <string name="date">9 Feb, 2021</string>
    <string name="highlight">Contact Lost With Sriwijaya Air Boeing 737–500 After Take Off</string>
    <string name="nathania_slavi">Nathania Slavi</string>
    <string name="all">All</string>
    <string name="international">International</string>
    <string name="media">Media</string>
    <string name="magazine">Magazine</string>
    <string name="business">Business</string>
    <string name="title_item">Indonesia braces for more weather disasters. Climate crisis…</string>
    <string name="dummy_date">15/02/2021</string>
    <string name="dummy_duration">10 Min Read</string>
    <string name="floatingactionbutton">FloatingActionButton</string>
    <string name="log_out">Log Out</string>
    <string name="content">A search is underway after suspected debris from an Indonesian Sriwijaya Air flight was found hours after the plane went missing. The plane lost contact after taking off from Indonesian capital Jakarta on Saturday en route to the city of Pontianak in West Kalimantan province. The Boeing 737-500 flight was carrying 62 people. The 50 passengers included seven children and three babies.</string>
    <string name="delivia_cibrent">Delivia Cibrent</string>
    <string name="deliviacib_email_com">deliviacib@email.com</string>
    <string name="preferences">Preferences</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="notifications">Notifications</string>
    <string name="account">Account</string>
    <string name="edit_account">Edit Account</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="language">Language</string>
    <string name="change_account">Change Account</string>
    <string name="settings">Settings</string>
    <string name="privacy_and_settings_help">Privacy and Settings Help</string>
</resources>